--- a/Proyecto/css/responsivo.css
+++ b/Proyecto/css/responsivo.css
@@ -4,6 +4,10 @@
 
 }
 /* esto funcionará si la resolución maxima de la pantalla es de 1200 pixeles de ancho */
+#menu-bar{display: none;}
+.icon-menu{display: none;}
+.munu-responsivo{display: none;}
+
 @media (max-width: 1366px) {
     .top{ width:  1350px;}
     /*colorAmarillo*/
@@ -34,6 +38,7 @@
     body{overflow-x:hidden; }
     #menu-bar{display: none;}
     .icon-menu{display: none;}
+    .munu-responsivo{display: none;}
 }
 
 @media (max-width: 1280px) {
@@ -72,6 +77,7 @@
     .Abajo li{margin-left: 34px;}
     #menu-bar{display: none;}
     .icon-menu{display: none;}
+    .munu-responsivo{display: none;}
 
 }
 @media (max-width: 1024px){
@@ -122,6 +128,7 @@
     .uanl{margin-top: 435px; margin-left: 455}
     #menu-bar{display: none;}
     .icon-menu{display: none;}
+    .munu-responsivo{display: none;}
 }
 
 
@@ -197,6 +204,7 @@
     .munu-responsivo a:hover {color:#999999; background:#111111;}
     #menu-bar:checked ~ .munu-responsivo  {transition: all 0.5s;transform: translateX(-25%);}
     .icon-menu{display: block;}
+    .munu-responsivo{display: block;}
 }
 
 @media (max-width: 480px){
@@ -276,6 +284,7 @@
     .munu-responsivo a:hover {color:#999999; background:#111111;}
     #menu-bar:checked ~ .munu-responsivo  {transition: all 0.5s;transform: translateX(-40%);}
     .icon-menu{display: block;}
+    .munu-responsivo{display: block;}
     
 }
 
@@ -362,6 +371,7 @@
     .ServiciosQueOfrece{width: 300pX;}
     .TituloProgramasPrevencion{margin-top: -20px; margin-left: 30}
     .icon-menu{display: block;}
+    .munu-responsivo{display: block;}
 }
 
 
