--- a/Proyecto/css/responsivo.css
+++ b/Proyecto/css/responsivo.css
@@ -1,7 +1,29 @@
 @font-face {
     font-family: "light";
-    src: url('../../Types/OpenSans/OpenSans-Light.ttf');
+    src: url('../../Types/OpenSans/OpenSans-Light.ttf'); /* Safari, Android, iOS */
+    src: url('../../Types/OpenSans/opensans_light_macroman/OpenSans-Light-webfont.eot'); /* IE9 Compat Modes */
+    src: url('../../Types/OpenSans/opensans_light_macroman/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../../Types/OpenSans/opensans_light_macroman/OpenSans-Light-webfont.woff') format('woff'), /* Modern Browsers */
+         url('../../Types/OpenSans/opensans_light_macroman/OpenSans-Light-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
 
+}
+@font-face {
+    font-family: 'regular';
+    src: url('../../Types/OpenSans/OpenSans-Regular.ttf');
+
+    src: url('../../Types/OpenSans/opensans_regular_macroman/OpenSans-Regular-webfont.eot'); /* IE9 Compat Modes */
+    src: url('../../Types/OpenSans/opensans_regular_macroman/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../../Types/OpenSans/opensans_regular_macroman/OpenSans-Regular-webfont.woff') format('woff'), /* Modern Browsers */
+         url('../../Types/OpenSans/opensans_regular_macroman/OpenSans-Regular-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+@font-face {
+    font-family: 'bold';
+    src: url('../../Types/OpenSans/OpenSans-Bold.ttf');
+
+    src: url('../../Types/OpenSans/opensans_bold_macroman/OpenSans-Bold-webfont.eot'); /* IE9 Compat Modes */
+    src: url('../../Types/OpenSans/opensans_bold_macroman/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../../Types/OpenSans/opensans_bold_macroman/OpenSans-Bold-webfont.woff') format('woff'), /* Modern Browsers */
+         url('../../Types/OpenSans/opensans_bold_macroman/OpenSans-Bold-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 /* esto funcionará si la resolución maxima de la pantalla es de 1200 pixeles de ancho */
 #menu-bar{display: none;}
