some mistakes, IE affecs chrome

--- a/Proyecto/css/estilo.css
+++ b/Proyecto/css/estilo.css
@@ -207,7 +207,7 @@ body
 {
     margin-top: 1px;
     font-family: "light";
-    text-align: justify;
+    /*text-align: justify;*/
 }
 .ImagenNoticia1 .TituloNoticia1
 {
