--- a/Proyecto/css/ieallversion.css
+++ b/Proyecto/css/ieallversion.css
@@ -22,6 +22,9 @@
 		.tresAzulAbajo {margin-left: 40px; margin-top: -40px;}
 		.uanl {margin-top: 350px;}
 }
+@media (max-width: 320px){
+		.uanl {margin-top: 500px;}
+}
 /*
 	  <![if IE]>
             <style>
