--- a/Proyecto/css/estilo.css
+++ b/Proyecto/css/estilo.css
@@ -39,6 +39,20 @@ body
 
 
 }
+.Buscador input 
+{
+    background-color: white;
+    width: 100px;
+    height: 20px;
+    float: right;
+    margin-right: 0px;
+    border-radius: 43px 43px 43px 43px;
+    -moz-border-radius: 43px 43px 43px 43px;
+    -webkit-border-radius: 43px 43px 43px 43px;
+    border: 0px solid #000000;
+    font-family: 'light';
+    color: #6c6c6c;
+}
 .BtnHome
 {
     width: 20px;
