--- a/Proyecto/css/estilo.css
+++ b/Proyecto/css/estilo.css
@@ -4,6 +4,15 @@ body
     padding:0;
    
 }
+a:link{
+    text-decoration: none;
+    color: #6c6c6c;
+
+}
+a:visited{
+    text-decoration: none;
+    color: #6c6c6c;
+}
 .top 
 {
     background-color: #FFCD36;
