--- a/Proyecto/css/responsivoDentro.css
+++ b/Proyecto/css/responsivoDentro.css
@@ -61,6 +61,14 @@
     #menu-bar{display: none;}
     .icon-menu{display: none;}
     .munu-responsivo{display: none;}
+    /* //////////////////////////////////////////////////////////////////////// */
+    .middel{margin-top:50px; margin-left: 90px; }
+    .info{width: 70%; margin-bottom:0;    }
+    .info p { width: 90%;}
+    .infoSabiasQue{
+        /*display: block;
+        //height: 100%;*/
+    }
 }
 
 @media (max-width: 1280px) {
@@ -100,6 +108,14 @@
     #menu-bar{display: none;}
     .icon-menu{display: none;}
     .munu-responsivo{display: none;}
+     /* //////////////////////////////////////////////////////////////////////// */
+    .middel{margin-top:50px; margin-left: 90px; }
+    .info{width: 65%; margin-bottom:0;    }
+    .info p { width: 90%;}
+    .infoSabiasQue{
+        /*display: block;
+        //height: 100%;*/
+    }
 
 }
 @media (max-width: 1024px){
@@ -153,7 +169,7 @@
     .munu-responsivo{display: none;}
 
     /* //////////////////////////////////////////////////////////////////////// */
-    .middel{margin-top:100px; }
+    .middel{margin-top:50px; margin-left: 20px; }
     .info{width: 50%; margin-bottom:0;    }
     .info p { width: 90%;}
     .infoSabiasQue{
@@ -467,7 +483,7 @@
         .izq{margin-left: -20px; margin-top: 5px;}
         .vmSabiasQue{margin-top: 335px;}
         
-        .colorBlan hr {margin-top: 1700px; margin-left: 5px;}
+        .colorBlan hr {/*margin-top: 1700px;*/ margin-left: 5px;}
         .ColorGrisAb hr{margin-left: 0px; margin-top: 50px;}
         .lista{margin-top: 60px;}
         #ImagenServiciosQueOfrece{margin-top: 10px;}
