--- a/Proyecto/css/estilo.css
+++ b/Proyecto/css/estilo.css
@@ -1,22 +1,21 @@
-body
-{
-    margin:0;
-    padding:0;
-   
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    font-weight: normal;
+    font-style: normal;
+    font-size: 100%;
+    font-family: inherit;
+    vertical-align: baseline;
 }
-a:link{
+a:link , a:visited{
     text-decoration: none;
     color: #6c6c6c;
+}
 
-}
-a:visited{
-    text-decoration: none;
-    color: #6c6c6c;
-}
 .top 
 {
     background-color: #FFCD36;
-    width: 1680px;
     height: 100px;
     margin-left: 0px;
     padding-top: 25px;
@@ -33,20 +32,6 @@ a:visited{
 {
     margin-left: 2px;
     margin-top: 5px;
-}
-.Buscador
-{
-    background-color: white;
-    width: 100px;
-    height: 20px;
-    float: right;
-    margin-right: 0px;
-    border-radius: 43px 43px 43px 43px;
-    -moz-border-radius: 43px 43px 43px 43px;
-    -webkit-border-radius: 43px 43px 43px 43px;
-    border: 0px solid #000000;
-
-
 }
 .Buscador input 
 {
@@ -96,7 +81,7 @@ a:visited{
 .Arriba
 {
     background-color: #FFCD36;
-    width: 1015px;
+    display: block;
     height: 50px;
     float: left;
     display: inline-block;
@@ -105,69 +90,11 @@ a:visited{
 .Abajo
 {
 
-    width: 1015;
     height: 50px;
-    display: inline-block;
+    display: block;
     font-family:'light';
     padding-right: 0px;
 
-}
-.ColorAma
-{
-    background-color: #FFCD36;
-    width: 1680px;
-    height: 350px;
-    position: relative;
-}
-.ColorGris
-{
-    background-color: #EDEDED;
-    width: 1680px;
-    height: 380px;
-    position: relative;
-}
-.Banner
-{
-    margin-top: 30px;
-    background-color: gray;
-    width: 1180px;
-    height: 410px;
-    position: absolute;
-    z-index: 8;
-    margin-left: 250px;
-    margin-bottom: 0px;
-    opacity: .8;
-}
-.ColorBlan
-{
-    background-color: white;
-    width: 1680px;
-    height: 1000px;
-}
-.ColorGrisAb
-{
-    background-color: #EDEDED;
-    width: 1680px;
-    height: 435px;
-}
-.ColorBlanAb
-{
-    background-color: white;
-    width: 1680px;
-    height: 600px;
-}
-.ColorAzul
-{
-    background-color:#0097DB;
-    width: 1680px;
-    height: 370px;
-    position: relative;
-}
-.Logo img 
-{
-    height: 80px;
-    width: 165px;
-    margin-top: 10px;
 }
 .Abajo ul 
 {
@@ -180,637 +107,9 @@ a:visited{
 .Abajo li
 {
     display: inline;
-
-    /*margin: 0px 40px 10px 0;*/
     margin-right: 0px;
     margin-left: 38px;
     color:#575249;
 
 }
-.Noticia1
-{
-    background-color: #EDEDED;
-    height: 280px;
-    width: 1180px;
-    position: absolute;
-    z-index: 3;
-    margin-top: 70px;
-    margin-left: 250px;
-    padding-top: 0px;
-}
 
-.ImagenNoticia1
-{
-    height: 210px;
-    width: 340px;
-    z-index: 4;
-    margin-top: 20px;
-    margin-left:0px;
-
-}
-.ImagenNoticia1 img 
-{
-    height: 210px;
-    width: 340px;
-}
-.TituloNoticia1
-{
-    float: left;
-    margin-left: 365px;
-    margin-top: -205px;
-    width: 265px;
-    max-height: 75px;
-    background-color: #EDEDED;
-    font-family: 'light';
-    color: #6c6c6c;
-
-
-}
-.TituloNoticia1 h3
-{
-    margin-top: 1px;
-    font-family: "light";
-    /*text-align: justify;*/
-}
-.ImagenNoticia1 .TituloNoticia1
-{
-    z-index: 5;
-}
-.PreNoticia1
-{
-    float: left;
-    margin-left: 365px;
-    margin-top: -125px;
-    width: 816px;
-    max-height: 75px;
-    background-color: #EDEDED;
-
-}
-.PreNoticia1 p
-{
-    margin-top: 1px;
-    font-family: 'regular';
-    color:#6c6c6c;
-    height: 75px;
-    overflow: auto;
-    text-align: justify;
-}
-
-.VerMas
-{
-    background-color: #914DB1;
-    width: 85px;
-    height: 25px;
-    border-radius: 43px 43px 43px 43px;
-    -moz-border-radius: 43px 43px 43px 43px;
-    -webkit-border-radius: 43px 43px 43px 43px;
-    border: 0px solid #000000;
-
-}
-
-.VerMas a
-{
-    margin-left: 10px;
-    text-decoration: none;
-    color: white;
-    font-family: 'bold';
-}
-
-.not1
-{
-    margin-left: 365px;
-    margin-top: -35px;
-    padding-top: 5px;
-    float: left;
-}
-.ArribaBlanco
-{
-
-    height:500px; 
-    width:1180px;
-}
-.AbajoBlanco
-{
-
-    height:500px; 
-    width:1180px;	
-}
-.ColorBlan hr 
-{
-    width:70%;
-    margin-top: 0;
-    margin-bottom: 0;
-    padding: 0;
-}
-.Noticia2
-{
-    height: 500px;
-    width: 280px;
-    float: left;
-    margin-right: 20px;
-}
-.Noticia3
-{
-    height: 500px;
-    width: 280px;
-    float: left;
-    margin-right: 20px;
-}
-.Noticia4
-{
-    height: 500px;
-    width: 280px;
-    float: left;
-    margin-right: 20px;
-}
-.Noticia5
-{
-    height: 500px;
-    width: 280px;
-    float: left;
-    margin-right: 0px;
-}
-.Noticia2Ima
-{
-    width: 220px;
-    height: 220px;
-    background: gray;
-    -moz-border-radius: 100px;
-    -webkit-border-radius: 100px;
-    border-radius: 120px;
-    margin-left:30px;
-    margin-top: 40px;
-}
-.Noticia2Ima img
-{
-    width: 220px;
-    height: 220px;
-    border-radius: 150px; 
-    -webkit-border-radius: 150px; 
-    -moz-border-radius: 150px; 
-}
-.Noticia2Titulo
-{
-    max-height: 60px;
-    width: 280px;
-    margin-left: 0px;
-    margin-top: 10px;
-    margin-right: 0px;
-
-
-}
-/*                         77777777777777777777777777777777777777777                                                              */
-.Noticia2Titulo p
-{
-    padding-top: 0px;
-    text-align: justify;
-    font-family: "light";
-    margin-top: 0px;
-    margin-bottom: 0px;
-    font-size: 14px;
-    max-height: 55px;
-    overflow: hidden;
-    margin-left: 0px;
-}
-.Noticia2desc
-{
-    max-height: 100px;
-    width: 280px;
-    margin-left: 0px;
-    margin-right: 0px;
-    margin-top: 10px;
-    padding-top: 0px;
-    overflow: hidden;
-}
-.Noticia2desc p 
-{
-    font-family: "regular";
-    text-align: justify;
-    font-size: 12px;
-
-}
-.notGenerica
-{
-    margin-left: 0px;
-    margin-top:  15px;
-    float: left
-}
-.notGenerica a
-{
-    margin-left: 10px;
-    text-decoration: none;
-    color: white;
-}
-.SabiasQue
-{
-
-    height:300px; 
-    width:1180px;
-    position: relative;
-}
-.AbajoSabiasQue
-{
-
-    height:200px; 
-    width:1180px;
-}
-.ImagenSabiasQue
-{
-    height: 230px;
-    width: 330px;
-    float: right;
-    margin-top: 50px;
-}
-.ImagenSabiasQue img 
-{
-    height: 230px;
-    width: 330px;
-
-}
-.TituloSabiasQue
-{
-
-    max-height: 50px;
-    width:  650px;
-    float: right;
-    margin-top: 60px;
-    margin-right: 20px;
-
-}
-.TituloSabiasQue h3
-{
-    text-align: right;
-    margin: 0;
-    max-height: 63px;
-    overflow: hidden;
-}
-.DescSabiasQue
-{
-
-    max-height: 85px;
-    width: 830px;
-    margin-top: 120px;
-    margin-left: 0px;
-    z-index: 6;
-    position: absolute;
-    overflow: hidden;
-}
-.MiniImagenesSabiasQue
-{
-
-    height: 120px;
-    width: 330px;
-    float: right;
-}
-.izq
-{
-    margin-right: 95px;
-}
-.MiniImagenesSabiasQue img
-{
-    height: 120px;
-    width: 330px;
-}
-.vmSabiasQue
-{
-    position: absolute;
-    margin-top: 230px;
-    margin-left: 738px;
-}
-.ServiciosQueOfrece
-{
-    height: 395px;
-    width: 850px;
-    margin-left: 250px;
-    float: left;
-    position: relative;
-
-
-}
-.ContactosFrecuentes
-{
-    height: 395px;
-    width: 330px;
-    float: left;
-}
-#ImagenServiciosQueOfrece
-{
-    /*background-color: white;*/
-    width: 45px;
-    height: 45px;
-    float:left;
-    margin-top: 30px;
-}
-#ImagenServiciosQueOfrece img
-{
-    margin-top: 10px;
-}
-#TituloServiciosQueOfrece
-{
-    width: 250px;
-    height: 45px;
-    float: left;
-    margin-top: 22px;
-    margin-left:-6px;
-}
-.ServiciosQueOfrece hr
-{
-    margin-top: 95px;
-    margin-left: 0px;
-    width:96%;
-}
-.DescrServiciosQueOfrece
-{
-    width: 820px;
-    height: 85px;
-    margin-top: 50px;
-}
-.ServiciosQueOfrece ul li
-{
-    color:#71a9db;
-    margin-top: 3px;
-}
-
-.ServiciosQueOfrece ul li:first-line
-{
-    color:#6c6c6c;
-}
-.ServiciosQueOfrece ul
-{
-    padding-left: 18px;
-}
-.lista
-{
-    padding-right:25px;
-
-    width: 180px;
-    height: 115px;
-    float: left;
-}
-.ImagenContactosFrecuentes
-{
-    /*background-color: white;*/
-    width: 45px;
-    height: 45px;
-    float:left;
-    margin-top: 30px;
-}
-.ImagenContactosFrecuentes img
-{
-    margin-top: 10px;
-}
-.TituloContactosFrecuentes
-{
-    width: 250px;
-    height: 45px;
-    margin-top: 20px;
-    float: left;
-    margin-left:-6px;
-
-}
-.ContactosFrecuentes hr 
-{
-    width:98%;
-    float:left;
-    margin-top: 20px;
-}
-.listaContactosFrecuentes
-{
-    margin-top: 40px;
-    width: 120px;
-    height: 100px;
-    float:left;
-}
-.listaContactosFrecuentes ul
-{
-    padding-left:0px;
-    margin-top: 0px; 
-}
-.listaContactosFrecuentes ul li
-{
-    list-style: none;
-}
-.listaContactosFrecuentes ul li p
-{
-    margin: 0px;
-
-}
-.ImagenProgramasPrevencion
-{
-    /*background-color: gray;*/
-    width: 45px;
-    height: 45px;
-    float:left;
-    margin-top: 30px;
-    margin-left: 250px;
-}
-.ImagenProgramasPrevencion img
-{
-    margin-top: 10px;
-}
-.TituloProgramasPrevencion
-{
-    width: 300px;
-    height: 45px;
-    margin-top: 20px;
-    float: left;
-    margin-left:-10px;
-}
-.ColorBlanAb hr
-{
-    width:70%;
-    margin-top: 30px;
-    float: left;
-    margin-left: 250px;
-}
-.DescripcionProgramasPrevencion
-{
-    width: 70%;
-    height: 80px;
-    float: left;
-    margin-left: 250px;
-    margin-top: 25px;
-    padding-top: 0px;
-}
-.DescripcionProgramasPrevencion p
-{
-    margin-top: 0px;
-}
-.ListaUnoProgramasPrevencion
-{
-    height: 380px;
-    width: 35%;
-    float:left;
-    margin-left: 250px;
-}
-.ListaDosProgramasPrevencion
-{
-    height: 380px;
-    width: 35%;
-    float:left;
-    margin-left: 8px;
-}
-.ListaUnoProgramasPrevencion ul li
-{
-    color:#71a9db;
-    margin-top: 4px;
-}
-.ListaUnoProgramasPrevencion ul li:first-line
-{
-    color:#6c6c6c;
-}
-.ListaDosProgramasPrevencion ul li
-{
-    color:#71a9db;
-    margin-top: 4px;
-}
-.ListaDosProgramasPrevencion ul li:first-line
-{
-    color:#6c6c6c;
-}
-.ListaUnoProgramasPrevencion ul
-{
-    margin-top: 40px;
-    padding-left: 17px;
-}
-.ListaDosProgramasPrevencion ul
-{
-    margin-top: 40px;
-}
-.UnoAzulAbajo
-{
-
-    float: left;
-    margin-left: 250px;
-    margin-top: 55px;
-    height: 190px;
-    width: 460px;
-    color: white;
-}
-.DosAzulAbajo
-{
-    float: left;
-    height: 190px;
-    width: 420px;
-    margin-top: 55px;
-    margin-left: 20px;
-    color: white;
-}
-.TresAzulAbajo
-{
-    float: left;
-    height: 190px;
-    width: 259px;
-    margin-top: 55px;
-    margin-left: 20px;
-    color: white;
-}
-.UnoAzulAbajo p:first-child
-{
-    margin-top: 0px;
-    margin-bottom: 0px;
-    color: white;
-    font-weight: bold;
-}
-.UnoAzulAbajo p:nth-child(2)
-{
-    margin-top: 1px;
-    color: white;
-}
-.DosAzulAbajo p:first-child
-{
-    margin-top: 0px;
-    margin-bottom: 0px;
-    color: white;
-    font-weight: bold;
-}
-.DosAzulAbajo p:nth-child(2)
-{
-    margin-top: 1px;
-    color: white;
-}
-.TresAzulAbajo p:first-child
-{
-    margin-top: 0px;
-    margin-bottom: 0px;
-    color: white;
-    font-weight: bold;
-}
-.TresAzulAbajo p:nth-child(2)
-{
-    margin-top: 1px;
-    color: white;
-
-}
-.TresAzulAbajo p:nth-child(3)
-{
-    font-weight: bold;
-}
-.CuadrosContactanos
-{
-
-    height: 38px;
-    width: 38px;
-    float:left;
-    margin-right: 15px;
-}
-.CuadrosContactanos img 
-{
-    margin-right: 0px;
-}
-.ColorAzul hr
-{
-    width: 630px;
-    float: left;
-    margin-left: 250px;
-    margin-top: 50px;
-}
-.Uanl
-{
-    float: left;
-    position: absolute;
-    margin-top: 285px;
-    margin-left: 897px;
-    font-size: 12px;
-    color: white;
-
-}
-/*@font-face {
-    font-family: "light";
-    src: url('../../Types/OpenSans/OpenSans-Light.ttf');
-
-}
-@font-face {
-    font-family: 'regular';
-    src: url('../../Types/OpenSans/OpenSans-Regular.ttf');
-}
-@font-face {
-    font-family: 'bold';
-    src: url('../../Types/OpenSans/OpenSans-Bold.ttf');
-}*/
-.Noticia2desc
-{
-    font-family: "regular";
-    font-size: 12px;
-    text-align: justify;
-    color:#6c6c6c;
-}
-.DescSabiasQue , .DescripcionProgramasPrevencion , .DescrServiciosQueOfrece , .lista , .ListaDosProgramasPrevencion , .ListaUnoProgramasPrevencion , .listaContactosFrecuentes
-{
-    font-family: "regular";
-    font-size: 13px;
-    text-align: justify;
-    color:#6c6c6c;
-}
-.Noticia2Titulo , .TituloSabiasQue , .TituloProgramasPrevencion , .TituloContactosFrecuentes , #TituloServiciosQueOfrece
-{
-    font-family: "light";
-    font-size: 14px;
-    text-align: justify;
-    color:#6c6c6c;
-}
-
-.ColorAzul p
-{
-    font-family: "light";
-}
