--- a/Proyecto/css/estilo.css
+++ b/Proyecto/css/estilo.css
@@ -1,31 +1,32 @@
-* {
+html {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+
+*, *:before, *:after {
     padding: 0;
     margin: 0;
-    border: 0;
-    font-weight: normal;
-    font-style: normal;
-    font-size: 100%;
-    font-family: inherit;
+    box-sizing: border-box;  /*para que el padding y border de ese elemento no incrementan su ancho  */
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     vertical-align: baseline;
 }
+
+
+
 a:link , a:visited{
     text-decoration: none;
     color: #6c6c6c;
 }
 
-.top 
-{
-    background-color: #FFCD36;
-    height: 100px;
-    margin-left: 0px;
-    padding-top: 25px;
-}
+
 .btnBuscar
 {
     width: 20px;
     height: 20px;
-    float: right;
-    margin-right: 5px;
+    float: left;
+    /*margin-right: 5px;*/
 
 }
 .btnBuscar img
@@ -66,15 +67,15 @@ a:link , a:visited{
 .CentroArriba
 {
     background-color: #FFCD36;
-    width: 1180px;
     height: 100px;
+    clear: both;
 
 }
 .Logo
 {
 
-    width: 165px;
-    height: 100px;
+    width: 143px;
+    height: 69px;
     float:left;
 
 }
