--- a/Proyecto/css/estilo.css
+++ b/Proyecto/css/estilo.css
@@ -114,6 +114,7 @@ margin-right: -13.8%;
     margin-bottom:8%;
     display:inline;
     float: left;
+
 }
 .firstGray_title
 {
@@ -127,17 +128,41 @@ margin-right: -13.8%;
     font-family:'light';
     max-width: 285px;
     color:#575249;
-    margin-bottom:28px;
+    margin-bottom:18px;
 }
 #firstGray_des
 {
     float: left;
     font-size: 14px;
-    word-spacing: 0.0015em;
+    word-spacing: 0.15em;
     color:#575249;
     max-width:589px;
     margin-left: 20px;
     line-height:20px;
     font-family:'regular';
+    margin-bottom: 18px;
 }
+.verMas
+{
+    height: 25px;
+    width: 95px;
+    background-color: #914DB1;
+    border-radius: 43px 43px 43px 43px;
+    -moz-border-radius: 43px 43px 43px 43px;
+    -webkit-border-radius: 43px 43px 43px 43px;
+   float:right;
+   margin-right:48%;
+   margin-bottom:10%;
+   position:relative;
+
+}
+#firstGray_vermas{
+    text-decoration: none;
+    color: white;
+    font-family: 'bold';
+    font-size: 14.44px;
+    margin-left:18%;    
+
+}
+
 /*endFirstGray*/
