--- a/Proyecto/css/responsivo.css
+++ b/Proyecto/css/responsivo.css
@@ -10,7 +10,6 @@
 @font-face {
     font-family: 'regular';
     src: url('../../Types/OpenSans/OpenSans-Regular.ttf');
-
     src: url('../../Types/OpenSans/opensans_regular_macroman/OpenSans-Regular-webfont.eot'); /* IE9 Compat Modes */
     src: url('../../Types/OpenSans/opensans_regular_macroman/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
          url('../../Types/OpenSans/opensans_regular_macroman/OpenSans-Regular-webfont.woff') format('woff'), /* Modern Browsers */
@@ -19,9 +18,31 @@
 @font-face {
     font-family: 'bold';
     src: url('../../Types/OpenSans/OpenSans-Bold.ttf');
-
     src: url('../../Types/OpenSans/opensans_bold_macroman/OpenSans-Bold-webfont.eot'); /* IE9 Compat Modes */
     src: url('../../Types/OpenSans/opensans_bold_macroman/OpenSans-Bold-webfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
          url('../../Types/OpenSans/opensans_bold_macroman/OpenSans-Bold-webfont.woff') format('woff'), /* Modern Browsers */
          url('../../Types/OpenSans/opensans_bold_macroman/OpenSans-Bold-webfont.svg#svgFontName') format('svg'); /* Legacy iOS */
+}
+
+@media (max-width: 780px){
+    .conteiner{
+        margin: 0 auto;
+        overflow: hidden;
+        width:780px;
+    }
+}
+@media (max-width: 320px){
+    .conteiner{
+        margin: 0 auto;
+        overflow: hidden;
+        width:320px;
+    }
+    .Banner 
+    {
+        background-color: blue;
+        opacity: 1;
+    }
+}
+@-moz-document url-prefix() {
+
 }
