--- a/Proyecto/css/estilo.css
+++ b/Proyecto/css/estilo.css
@@ -83,6 +83,45 @@ margin-right: -13.8%;
     font-size: 15px;
     font-family:'light';
 }
+
+#menu-bar
+{
+    display:none;
+}
+#menu-bar:checked ~ .munu-responsivo{
+    transform:translateX(0%);
+}
+.icon-menu{
+    float:right;
+    margin-top:6%;
+    margin-right: -120px;
+    font-size:35px;
+    color:white;
+    cursor: pointer;
+    display:none;
+}
+.munu-responsivo{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background: rgba(51, 51, 51, 0.9);
+    top:95px;
+    left: 0;
+    transition: all 0.5s ;
+    transform: translateX(-100%);
+}
+.munu-responsivo a {
+    display: block;
+    color:white;
+    height: 50px;
+    text-decoration: none;
+    padding: 15px;
+    border-bottom:1px solid white;
+    font-family:'light';
+}
+.munu-responsivo a:hover{
+    background: rgba(255, 255, 255, 0.3);
+}
 /*EndMenu*/
 /*EndHeader*/
 /*firstYellow*/
@@ -177,6 +216,7 @@ margin-right: -13.8%;
     width: 240px;
     overflow: hidden;
     display:inline-table;
+
 }
 .firstWhite_img
 {   
