--- a/Proyecto/css/estilo.css
+++ b/Proyecto/css/estilo.css
@@ -482,3 +482,68 @@ margin-right: -13.8%;
     font-size: 9px;
 }
 /*endfirstBlue*/
+/*dentro html            ///////*/
+.info{
+   
+    float: left;
+    width: 70%;
+    margin-bottom: 10%;
+    
+}
+.info h2 {
+    font-family: 'light';
+    color: #6c6c6c;
+    margin-bottom:63px;
+    margin-top: 69px;
+}
+.info p {
+    width: 86%;
+    overflow: auto;
+    text-align: justify;
+    font-family: 'regular';
+    color: #6c6c6c;
+    margin-bottom:30px;
+}
+.infoSabiasQue{
+    float: left;
+    width:30%;
+    font-family: 'regular';  
+}
+
+.infoSabiasQue img{
+    width: 100%;
+    height: 200px;
+    margin-top: 169px;
+    margin-bottom:17px ;
+}
+.mnSQ img{
+    width: 100%;
+    height: 120px;
+    margin-top: 5px;
+}
+.vermas_info{
+    height: 25px;
+    width: 95px;
+    background-color: #914DB1;
+    border-radius: 43px 43px 43px 43px;
+    -moz-border-radius: 43px 43px 43px 43px;
+    -webkit-border-radius: 43px 43px 43px 43px;
+   float:left;
+   margin-bottom:20px;
+   margin-top:20px;
+}
+.vermas_info a
+{
+    text-decoration: none;
+    color: white;
+    font-family: 'bold';
+    font-size: 14.44px;
+    margin-left:18%;
+}
+.infohr{
+    width: 1px;
+}
+#infoSabiasQue{
+    width:100%;
+    margin-bottom:19px;
+}
