--- a/Proyecto/css/DentroEstilo.css
+++ b/Proyecto/css/DentroEstilo.css
@@ -1,3 +1,16 @@
+@font-face {
+    font-family: "light";
+    src: url('../Types/OpenSans/opensans_light_macroman/OpenSans-Light-webfont.woff') format('woff');/* Modern Browsers */
+}
+@font-face {
+    font-family: "regular";
+    src: url('url('../Types/OpenSans/opensans_regular_macroman/OpenSans-Regular-webfont.woff') format('woff');/* Modern Browsers */
+}
+@font-face {
+    font-family: "bold";
+    src: url('../Types/OpenSans/opensans_bold_macroman/OpenSans-Bold-webfont.woff') format('woff');/* Modern Browsers */
+}
+
 html {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -83,7 +96,10 @@ margin-right: -13.8%;
     font-size: 15px;
     font-family:'light';
 }
-
+#menu li:hover
+{
+    border-bottom: 1px solid #575249;
+}
 #menu-bar
 {
     display:none;
